--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -319,7 +319,7 @@ body {
 .escolher-filtro {
   display: flex;
   width: 80vw;
-  height: 69vw;
+  height: 60vh;
   background-color: white;
   position: fixed;
   border-radius: 10px;
@@ -327,37 +327,51 @@ body {
   align-items: center;
   flex-direction: column;
   padding: 10px;
+  margin-top: 80%;
 }
 
 .filtro-text {
+  display: flex;
   background-color: var(--primary-bg);
   border-radius: 5px;
   box-shadow: var(--shadow);
   margin-top: 18px;
   width: 80%;
-  height: 12.5%;
+  height: 15.5%;
+  font-size: 0.4rem;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 
 }
 
 .filtro-btn {
   display: flex;
   width: 68%;
-  height: 20.5%;
+  height: 7vh;
   margin-top: 12px;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   gap: 12px;
-}
-
-.filtro-btn-1 {
   background-color: var(--primary-bg);
   border-radius: 5px;
   box-shadow: var(--shadow);
-  width: 30%;
-  height: 80%;
-
+  font-size: 0.4rem;
 }
+
+.contem-escolhe-filtro {
+  width: 80%;
+  display: flex;
+  justify-content: center;
+}
+
+.select-opt {
+  border: 1px solid black;
+  width: 65%;
+  overflow-y: auto;
+}
+
 
 /*DASHBOARDS*/
 
@@ -571,7 +585,8 @@ body {
 
   .escolher-filtro {
     width: 35%;
-    height: 47%;
+    height: 50%;
+    margin-top: 30%;
   }
 
   .btn-sair {
@@ -581,6 +596,11 @@ body {
   #btn-sair-filtro {
     width: 35%;
     height: 40%;
+  }
+
+  .filtro-btn{
+    width: 32% !important;
+    cursor: pointer;
   }
 
   /*DASHBOARDS*/
