Sei la, já me perdi

--- a/site/public/css/feedbackDash.css
+++ b/site/public/css/feedbackDash.css
@@ -226,7 +226,8 @@ body {
 }
 
 .dado-kpi {
-  font-size: 2.0vw;
+  margin-top: -13px;
+  font-size: 0.5rem;
 }
 
 /*FILTRO*/
@@ -381,9 +382,9 @@ body {
   gap: 15px;
 }
 
-.primeira-dashboard {
+.primeira-dashboardF {
   width: 80vw;
-  height: auto;
+  height: 280px;
   background-color: var(--primary-bg);
   border-radius: 16px;
   box-shadow: var(--shadow);
