--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -54,6 +54,7 @@ body {
 }
 
 .img-nav-alerta {
+  display: flex !important;
   width: 5%;
   height: 100%;
   padding-right: 0 !important;
@@ -246,10 +247,13 @@ body {
   align-items: center;
 }
 
-.filtroSelecionado {
+.filtroSelecionado{
   width: 100vw;
   margin-left: 10%;
-  font-size: 0.5rem;
+}
+
+.filtroSelecionado h1  {
+  font-size: 1.2rem;
 }
 
 .filtro-aplicado {
@@ -451,7 +455,7 @@ body {
     display: flex !important;
     flex-direction: row;
     width: 50vw;
-    font-size: 1vw;
+    font-size: 1.2vw;
     align-items: center;
     justify-content: space-around;
     font-weight: bold;
@@ -469,7 +473,7 @@ body {
   }
 
   .contem-alerta {
-    display: flex !important;
+    display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -478,7 +482,7 @@ body {
   }
 
   .img-nav-alerta2 {
-    display: flex;
+    display: none;
     flex-direction: row;
     width: 12%;
     height: 36%;
@@ -665,11 +669,6 @@ body {
 
 
 }
-
-.contem-alerta {
-  display:none;
-}
-
 .nav-selected {
   text-decoration: underline !important;
 }
@@ -847,4 +846,20 @@ input:checked+.slider {
 
 input:checked+.slider:before {
   transform: translateX(26px);
+}
+
+.persona-switcher {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+.persona-switcher button {
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.persona-switcher button:hover{
+  cursor: pointer;
 }
