--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -602,7 +602,7 @@ p {
 .historia {
   display: flex;
   width: 100%;
-  height: 120vh;
+  height: 100vh;
   flex-direction: column;
   justify-content: start;
   padding-top: 100px;
@@ -623,12 +623,12 @@ p {
 }
 
 .historia p {
-  width: 40%;
-  color: var(--primary-bg);
-  font-size: 18px;
-  font-weight: bold;
-  background-color: var(--black-text);
+  width: 70%;
+  color: var(--black-text);
+  font-size: 14px;
   padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
   border-radius: 15px;
 }
 
@@ -643,6 +643,13 @@ p {
   justify-content: center;
   align-items: center;
   gap: 20px;
+}
+
+.history-column{
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
+  align-items: center;  
 }
 
 .background {
