--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -42,6 +42,10 @@ body {
   height: 80%;
 }
 
+.contem-alerta2{
+  display: flex !important;
+}
+
 .logo-nav-container {
   width: 13%;
   height: 100%;
@@ -437,6 +441,11 @@ body {
 
 @media (min-width: 1024px) {
   /*NAV BAR*/
+  
+  .contem-alerta2{
+    display: none !important;
+  }
+  
 
   .mobile-nav-bar {
     height: 10vh;
