--- a/site/public/css/feedbackDash.css
+++ b/site/public/css/feedbackDash.css
@@ -83,7 +83,7 @@ body {
   display: flex !important;
   position: fixed;
   z-index: 1000;
-  background-color: var(--primary-bg);
+  background-color: #2C3930;
   height: 100vh;
   width: 35%;
   /*  box-shadow: 4px 0 10px rgba(0, 0, 0, 0.5); */
@@ -91,7 +91,7 @@ body {
   left: 0;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
   font-weight: bold;
   border-radius: 10px;
   transition: transform 0.3s ease-in-out;
@@ -104,7 +104,7 @@ body {
 
 .side-bar a {
   text-decoration: none !important;
-  color: var(--primary-text);
+  color: var(--primary-bg);
   font-size: 4vw;
 }
 
@@ -121,7 +121,7 @@ body {
 
 .img-side-bar {
   display: flex;
-  height: 10%;
+  height: 20%;
   align-items: center;
   justify-content: center;
 }
@@ -130,10 +130,14 @@ body {
   display: flex;
   flex-direction: column;
   gap: 70px;
-  height: 88%;
+  height: 100%;
   width: 100%;
   align-items: center;
   justify-content: center;
+}
+
+.side-bar-links-container a{
+  font-size: 15px;
 }
 
 .side-bar-links-container a:hover {
