--- a/site/public/css/feedbackDash.css
+++ b/site/public/css/feedbackDash.css
@@ -462,6 +462,9 @@ body {
   align-items: center;
   border-radius: 5px;
   padding: 5px;
+  width: 80%;
+  display: flex;
+  justify-content: center;
 }
 
 .cabecalho {
@@ -475,12 +478,10 @@ body {
 
 .cabecalho-municipio {
   display: flex;
-  flex-direction: row;
   width: 100%;
   height: 100%;
   justify-content: center;
   gap: 5px;
-
 }
 
 .cabecalho p {
@@ -500,13 +501,16 @@ body {
 }
 
 .descricao {
-  margin-top: 7px;
+  display: flex;
+  width: 80%;
+  height: 100%;
   font-size: 0.8rem;
-  width: 90%;
-  height: 80%;
+  justify-content: start;
+  align-items: center;
+  margin-top: 10px;
 }
 
-.descricao a {
+.descricao p {
   text-decoration: none;
   color: var(--primary-text);
 }
