--- a/site/public/css/feedbackDash.css
+++ b/site/public/css/feedbackDash.css
@@ -136,7 +136,7 @@ body {
   justify-content: center;
 }
 
-.side-bar-links-container a{
+.side-bar-links-container a {
   font-size: 15px;
 }
 
@@ -426,7 +426,7 @@ body {
   align-items: center;
   justify-content: center;
   border-radius: 13px;
-  cursor:pointer;
+  cursor: pointer;
 }
 
 
@@ -489,7 +489,6 @@ body {
   color: var(--dropdown-letter);
   font-weight: bold;
 }
-
 
 .cabecalho-poluente {
   display: flex;
@@ -685,7 +684,7 @@ body {
     height: 40%;
   }
 
-  .filtro-btn{
+  .filtro-btn {
     width: 32% !important;
     cursor: pointer;
   }
@@ -709,25 +708,25 @@ body {
 
   /*button ver comentários*/
 
-  .button-see{
+  .button-see {
     margin-top: 60px;
   }
 
-  .dentro-button-see{
+  .dentro-button-see {
     width: 19vw;
   }
 
   /*COMENTARIOS*/
 
-  .contem-comentarios{
+  .contem-comentarios {
     gap: 13px;
   }
 
-  .cabecalho{
+  .cabecalho {
     font-size: 1.2rem;
   }
 
-  .descricao{
+  .descricao {
     font-size: 1.2rem;
   }
 
@@ -913,5 +912,19 @@ input:checked+.slider:before {
 }
 
 
+.star-rating {
+  font-size: 2rem;
+  color: gray;
+}
+
+.star {
+  cursor: default;
+  transition: color 0.3s;
+}
+
+.filled {
+  fill: gold;
+  stroke: none;
+}
 
 /**/
