--- a/site/public/css/cadastroPersona.css
+++ b/site/public/css/cadastroPersona.css
@@ -180,5 +180,76 @@
     .botao-cadastrar{
         width: 15vw;
     }
+}
 
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease;
+}
+#overlay.active {
+  opacity: 1;
+  visibility: visible;
+}
+#modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.8);
+  background: #fff;
+  padding: 20px;
+  z-index: 1001;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+  border-radius: 10px;
+  background-color: var(--primary-bg);
+  width: 40%;
+  border: 1px solid var(--title-text);
+  height: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  color: var(--title-text);
+}
+
+#modal span {
+  color: var(--primary-green);
+}
+
+#modal p {
+  font-size: medium;
+  width: 70%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal button {
+  background-color: var(--title-text);
+  color: var(--primary-bg);
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  width: 40%;
+  height: 18%;
+  align-self: flex-end;
+}
+#modal button:hover {
+    cursor: pointer;
+    opacity: 80%;
+}
+
+
+#modal.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translate(-50%, -50%) scale(1);
 }
